--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Nesh Portfolio using ReactJs" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Vignesh Portfolio</title>
+    <title>Vignesh B</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
